[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "leetcode"
path = "src/lib.rs"


[[bin]]
name = "remove_from_sorted"
path = "bin/remove_from_sorted.rs"

[[bin]]
name = "scan"
path = "bin/scan.rs"

[[bin]]
name = "dfs"
path = "bin/dfs.rs"

[[bin]]
name = "993"
path = "bin/993_cousins_tree.rs"

[[bin]]
name = "94"
path = "bin/94_inorder.rs"

[[bin]]
name = "fac"
path = "bin/factorial_tail_recusion.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
